[project]
name = "benchmark"
version = "0.1.0"
description = "Benchmark script for comparing karva and pytest performance"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = ["matplotlib", "numpy", "pytest"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["INP001", "D", "T201", "D"]
