[package]
name = "karva"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
argfile = { workspace = true }
camino = { workspace = true }
chrono = { workspace = true }
colored = { workspace = true }
tracing = { workspace = true, features = ["release_max_level_debug"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
tracing-flame = { workspace = true }
tracing-tree = { workspace = true }
wild = { workspace = true }
